--- a/css/styles.css
+++ b/css/styles.css
@@ -32,3 +32,12 @@ main {
 .header h1 {
   margin: 0;
 }
+
+.footer {
+    background-color: rgb(82, 154, 230);
+    color: white;
+    padding: 6px;
+    text-align: center;
+    width: 100%;
+    height: 40px;
+  }
