--- a/css/styles.css
+++ b/css/styles.css
@@ -140,3 +140,77 @@ main {
     transform: scale(1.05);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
+
+.contact-item,
+.khaokheow,
+.sichang,
+.pattaya,
+.jaopor,
+.wad {
+  text-align: center;
+  line-height: 40px;
+  padding: 2rem;
+  font-size: 20px;
+}
+
+.chonburi{
+  text-align: center;
+  line-height: 40px;
+  padding: 2rem;
+  font-size: 20px;
+}
+
+.chonburi h2,
+.khaokheow h2,
+.sichang h2,
+.pattaya h2,
+.jaopor h2,
+.wad h2 {
+  font-size: 30px;
+}
+.khaokheow h2 {
+  margin-top: -30px;
+}
+
+.chonburi p,
+.khaokheow p,
+.sichang p,
+.pattaya p,
+.jaopor p,
+.wad p {
+  margin-top: -30px;
+  text-align: center;
+  font-size: 20px;
+}
+
+.khaokheow,
+.sichang,
+.pattaya,
+.jaopor,
+.wad {
+  border-bottom: 1px solid rgb(82, 154, 230);
+  padding-bottom: 30px;
+}
+
+.travel {
+  text-align: center;
+  line-height: 40px;
+  font-size: 40px;
+}
+
+.message{
+  margin-top: 40px;
+}
+
+.contact{
+  margin-top: -20px;
+  line-height: 25px;
+}
+
+.contact-item img {
+  margin-top: -50px;
+}
+
+.contact-item p {
+  margin-top: -20px;
+}
